Fix menu item overflow

--- a/src/assets/css/AdminLTE.css
+++ b/src/assets/css/AdminLTE.css
@@ -394,8 +394,7 @@ a:focus {
     float: left;
   }
   .navbar-custom-menu .navbar-nav > li > a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding: 15px 10px;
     line-height: 20px;
   }
 }
